add signature and image

--- a/JustDoorsAndScreens/JustDoorsAndScreens.csproj
+++ b/JustDoorsAndScreens/JustDoorsAndScreens.csproj
@@ -638,22 +638,30 @@
     <Content Include="images\Door_RH.PNG" />
     <Content Include="images\Door_RH_tripple.PNG" />
     <Content Include="images\flyscreen_11mm.PNG" />
+    <Content Include="images\flyscreen_11mm_4Pins.PNG" />
+    <Content Include="images\flyscreen_11mm_4Pins_Skirt.PNG" />
+    <Content Include="images\flyscreen_11mm_Pins_Skirt.PNG" />
+    <Content Include="images\flyscreen_11mm_SideChannels.PNG" />
+    <Content Include="images\flyscreen_11mm_Skirt.PNG" />
+    <Content Include="images\flyscreen_11mm_Spings.PNG" />
+    <Content Include="images\flyscreen_11mm_Springs.PNG" />
+    <Content Include="images\flyscreen_37x11_Skirt.PNG" />
     <Content Include="images\flyscreen_9mm.PNG" />
     <Content Include="images\flyscreen_37x11.PNG" />
-    <Content Include="images\flyscreen_37x11_Plate.PNG" />
     <Content Include="images\flyscreen_37x11_Table.PNG" />
     <Content Include="images\flyscreen_9mm_Pins.PNG" />
     <Content Include="images\flyscreen_11mm_Pins.PNG" />
-    <Content Include="images\flyscreen_9mm_Pins_Plate.PNG" />
-    <Content Include="images\flyscreen_11mm_Pins_Plate.PNG" />
-    <Content Include="images\flyscreen_9mm_Plate.PNG" />
-    <Content Include="images\flyscreen_11mm_Plate.PNG" />
+    <Content Include="images\flyscreen_9mm_Pins_Skirt.PNG" />
+    <Content Include="images\flyscreen_9mm_Skirt.PNG" />
+    <Content Include="images\flyscreen_9mm_Spings.PNG" />
+    <Content Include="images\flyscreen_9mm_Springs.PNG" />
     <Content Include="images\JustDoorsAndScreenFooter.PNG" />
     <Content Include="images\JustDoorsAndScreens.PNG" />
     <Content Include="images\JustDoorsAndScreenTitle.PNG" />
     <Content Include="images\Door_Panel.PNG" />
     <Content Include="images\Door_Panel_LH.PNG" />
     <Content Include="images\Door_Panel_RH.PNG" />
+    <Content Include="images\Signature.PNG" />
     <Content Include="images\Slider_LH.PNG" />
     <Content Include="images\Slider_LH_tripple.PNG" />
     <Content Include="images\Slider_RH.PNG" />
